--- a/category.html
+++ b/category.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Naam news</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,14 +17,19 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="shortcut icon"
-      href="https://t3.ftcdn.net/jpg/04/06/91/62/360_F_406916265_hxmrv7wgw9SZN9871yebxQJAX7HsHdNp.jpg"
+      href="https://cdn-icons-png.flaticon.com/128/9687/9687590.png"
       type="image/x-icon"
     />
   </head>
   <body dir="rtl">
     <nav class="navbar navbar-expand-lg my-nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">نعم الإخبارية</a>
+        <img
+          src="https://cdn-icons-png.flaticon.com/128/1042/1042782.png"
+          width="50em"
+        />
+        <a class="navbar-brand" href="#" class="col-11">نعم الإخبارية</a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -39,30 +44,35 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >الرئيسية</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">اقتصاد</a>
+              <a class="nav-link" href="#economey">اقتصاد</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" role="button" aria-expanded="false">
+              <a
+                class="nav-link"
+                href="#sport"
+                role="button"
+                aria-expanded="false"
+              >
                 رياضة
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">سياسة</a>
+              <a class="nav-link" href="#politics">سياسة</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">صحة</a>
+              <a class="nav-link" href="#health">صحة</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
             <input
               class="form-control ms-2"
               type="search"
-              placeholder="ابحث"
+              placeholder="اكتب كلمة البحث"
               aria-label="Search"
             />
             <button class="btn btn-outline-dark" type="submit">
@@ -72,26 +82,24 @@
         </div>
       </div>
     </nav>
+
     <div class="container-fluid">
       <div class="politics m-5">
-        <div class="title">سياسة</div>
+        <div class="title" id="politics">سياسة</div>
         <hr />
       </div>
       <div class="row m-5">
         <div class="col-md-8 my-card">
-          <div class="row">
-            <div class="col-md-12">
-              <img
-                src="https://picsum.photos/300/150"
-                class="img-fluid w-100"
-                alt="Gaza"
-              />
-            </div>
-          </div>
-          <div class="row my-card">
+          <img
+            src="https://picsum.photos/300/150"
+            class="row w-100"
+            alt="Gaza"
+          />
+
+          <div class="my-card">
             <div class="my-card-body">
-              <div class="card-cat">سياسة - فلسطين</div>
-              <h5 class="my-card-title">
+              <div class="card-cat row">سياسة - فلسطين</div>
+              <h5 class="my-card-title row">
                 غزة! عام على الحرب وما زالت الأبادة مستمرة
               </h5>
               <p class="my-card-text">
@@ -105,13 +113,11 @@
         <div class="col-md-4">
           <div class="row my-card">
             <div class="row">
-              <div class="co-md-12">
-                <img
-                  src="https://picsum.photos/300/150"
-                  class="w-100"
-                  alt="Gaza"
-                />
-              </div>
+              <img
+                src="https://picsum.photos/300/150"
+                class="col-md-12"
+                alt="Gaza"
+              />
               <div class="row my-card">
                 <div class="col">
                   <div class="my-card-body">
@@ -131,13 +137,12 @@
           </div>
           <div class="row">
             <div class="row my-card">
-              <div class="col-md-6">
-                <img
-                  src="https://picsum.photos/300/150"
-                  class="img-fluid"
-                  alt="Gaza"
-                />
-              </div>
+              <img
+                src="https://picsum.photos/300/150"
+                class="col-md-6"
+                alt="Gaza"
+              />
+
               <div class="col-md-6">
                 <div class="my-card-body">
                   <div class="card-cat">سياسة - فلسطين</div>
@@ -226,7 +231,7 @@
         </div>
       </div>
       <div class="Health m-5">
-        <div class="title">صحة</div>
+        <div class="title" id="health">صحة</div>
         <hr />
       </div>
       <div class="row m-5">
@@ -378,7 +383,7 @@
         </div>
       </div>
       <div class="Economey m-5">
-        <div class="title">اقتصاد</div>
+        <div class="title" id="economey">اقتصاد</div>
         <hr />
       </div>
       <div class="row m-5">
@@ -530,7 +535,7 @@
         </div>
       </div>
       <div class="Sport m-5">
-        <div class="title">رياضة</div>
+        <div class="title" id="sport">رياضة</div>
         <hr />
       </div>
       <div class="row m-5">
@@ -684,27 +689,25 @@
     </div>
     <footer>
       <div class="row">
-        <div class="col-2 m-4">
+        <div class="col-md-2 m-4">
           <p>تغطية اعلامية مميزة على مدار الساعة</p>
         </div>
-        <div class="col-2 m-4">
-          <ul style="list-style: none">
-            <li>سياسة</li>
-            <li>اقتصاد</li>
-            <li>رياضة</li>
-            <li>صحة</li>
-          </ul>
+        <div class="col-md-2 m-4">
+          <div class="row">رياضة</div>
+
+          <div class="row">سياسة</div>
+          <div class="row">اقتصاد</div>
+          <div class="row">صحة</div>
         </div>
-        <div class="col-2 m-4">
-          عن الموقع
-          <ul style="list-style: none">
-            <li>اتصل بنا</li>
-            <li>اعلن معنا</li>
-          </ul>
+        <div class="col-md-2 m-4">
+          <div class="row">عن الموقع</div>
+          <div class="row">
+            <div class="row">اتصل بنا</div>
+            <div class="row">اعلن معنا</div>
+          </div>
         </div>
-        <div class="col-2 m-4">
-          اتصل بنا
-          <p>+970568973379</p>
+        <div class="col-md-2 m-4">
+          <p>اتصل بنا +970568973379</p>
         </div>
       </div>
     </footer>
