--- a/detailed.html
+++ b/detailed.html
@@ -315,24 +315,5 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  <script>
-    const increaseBtn = document.getElementById("plus");
-    const decreaseBtn = document.getElementById("minus");
-    const textElements = document.querySelectorAll(".des");
-    let fontSize = 1.5;
-
-    increaseBtn.addEventListener("click", () => {
-      if (fontSize < 4) {
-        fontSize += 0.5;
-        textElements.forEach((el) => (el.style.fontSize = fontSize + "em"));
-      }
-    });
-
-    decreaseBtn.addEventListener("click", () => {
-      if (fontSize > 1) {
-        fontSize -= 0.5;
-        textElements.forEach((el) => (el.style.fontSize = fontSize + "em"));
-      }
-    });
-  </script>
+  <script src="js/script.js"></script>
 </html>
