The layout is done

--- a/detailed.html
+++ b/detailed.html
@@ -85,24 +85,23 @@
 
     <div class="container">
       <div class="row">
-        <div class="row">
-          <div class="col-md-12">
-            <p class="card-cat">سياسة-فلسطين</p>
-            <p class="news-title">
-              شهداء في حي الشجاعية .. دبابات الاحتلال ومسيراته تخرق وقف اطلاق
-              النار في غزة
-            </p>
-          </div>
+        <div class="col-md-12">
+          <p class="card-cat">سياسة-فلسطين</p>
+          <p class="news-title">
+            شهداء في حي الشجاعية .. دبابات الاحتلال ومسيراته تخرق وقف اطلاق
+            النار في غزة
+          </p>
         </div>
-        <div class="row">
+        <div class="col-12">
           <div class="d-flex date gap-1">
             <i class="bi bi-calendar-date"></i>
             <p>2 مارس 2025</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-8 d-flex justify-content-between">
+        <div class="col-12">
+          <div class="col-lg-8 col-12 d-flex justify-content-between">
             <p>شارك القصة</p>
+            <!-- icons from bootstrab -->
             <div class="gap-2 d-flex">
               <i class="bi bi-facebook"></i>
               <i class="bi bi-instagram"></i>
@@ -113,18 +112,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg-8 col-12">
           <div class="row">
-            <div class="col-md-12">
-              <img
-                src="https://picsum.photos/300/150"
-                class="w-100"
-                alt="Gaza"
-              />
-            </div>
+            <img
+              src="https://picsum.photos/300/150"
+              class="col-12"
+              alt="Gaza"
+            />
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 col-12">
           <div class="title">المزيد من أخبار فلسطين</div>
           <hr />
           <div class="row">
@@ -138,9 +135,9 @@
           </div>
           <div class="row">
             <iframe
-              src="https://your-ad-url.com"
+              src="https://ad-url.com"
               width="300"
-              height="250"
+              height="150"
               frameborder="0"
               scrolling="no"
             ></iframe>
@@ -166,7 +163,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-lg-8 col-12">
             <div class="des">
               فاد مراسل التلفزيون العربي في غزة أحمد البطة مساء اليوم الخميس،
               بارتفاع حصيلة استهداف الاحتلال لحي الشجاعية شرقي مدينة غزة إلى 3
@@ -188,17 +185,17 @@
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 col-12">
             <div class="row title">موضوعات ذات صلة</div>
             <hr />
             <div class="row my-1">
               <img
                 src="https://picsum.photos/300/150"
-                class="col-md-4"
+                class="col-4"
                 alt="Gaza"
               />
 
-              <div class="col-md-8">
+              <div class="col-8">
                 <div class="row my-1">
                   <div class="card-cat">سياسة-فلسطين</div>
                 </div>
@@ -213,11 +210,11 @@
             <div class="row">
               <img
                 src="https://picsum.photos/300/150"
-                class="col-md-4"
+                class="col-4"
                 alt="Gaza"
               />
 
-              <div class="col-md-8">
+              <div class="col-8">
                 <div class="row my-1">
                   <div class="card-cat">سياسة-فلسطين</div>
                 </div>
@@ -232,11 +229,11 @@
             <div class="row my-1">
               <img
                 src="https://picsum.photos/300/150"
-                class="col-md-4"
+                class="col-4"
                 alt="Gaza"
               />
 
-              <div class="col-md-8">
+              <div class="col-8">
                 <div class="row my-1">
                   <div class="card-cat">سياسة-فلسطين</div>
                 </div>
@@ -252,7 +249,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg-8 col-12">
           <div class="title">اقرا ايضا</div>
           <hr />
           <div class="row px-2">
@@ -273,9 +270,9 @@
             قائماً بفضل جهود الإغاثة وصمود الأهالي.
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 col-4">
           <iframe
-            src="https://your-ad-url.com"
+            src="https://ad-url.com"
             width="300"
             height="250"
             frameborder="0"
@@ -285,7 +282,7 @@
       </div>
     </div>
     <footer>
-      <div class="row">
+      <div class="row justify-content-between">
         <div class="col-md-2 m-4">
           <p>تغطية اعلامية مميزة على مدار الساعة</p>
         </div>
